--- a/app/admin/components/asp-net-roles/asp-net-roles.component.html
+++ b/app/admin/components/asp-net-roles/asp-net-roles.component.html
@@ -212,7 +212,7 @@
 
 
 
-<!-- Add Lab Test Procedure -->
+<!-- Add New user Role -->
 <form novalidate="novalidate" [formGroup]="newForm">
   <div class="modal" role="dialog" id="newDataModal1">
     <div class="modal-dialog modal-md">
@@ -224,17 +224,17 @@
         <div class="modal-body">
 
           <div class="form-group row">
-            <label for="txtEdit" class="col-sm-4 col-form-label">Role</label>
-            <div class="col-sm-8">
-              <input type="text" autocomplete="off" id="txtrole" class="form-control" placeholder="Role" name="name"
-                formControlName="name" maxlength="30" #defaultTextBox_Edit [ngClass]="{ 'is-invalid': editForm.get('name').invalid 
-    && (editForm.get('name').dirty || editForm.get('name').touched || editForm.valid), 
-    'is-valid': editForm.get('name').valid 
-    && (editForm.get('name').dirty || editForm.get('name').touched || editForm.valid) }">
-              <span class="text-danger" *ngIf="editForm.get('name').invalid 
-    && (editForm.get('name').dirty || editForm.get('name').touched || editForm.valid) 
-    && editForm.get('name').errors?.required">Status can't be blank</span>
-            </div>
+          <label for="txtEdit" class="col-sm-4 col-form-label">Role</label>
+          <div class="col-sm-8">
+          <input type="text" autocomplete="off" id="txtrole" class="form-control" placeholder="Role" name="name"
+          formControlName="name" #Description maxlength="30" #defaultTextBox_Edit [ngClass]="{ 'is-invalid': editForm.get('name').invalid 
+          && (editForm.get('name').dirty || editForm.get('name').touched || editForm.valid), 
+          'is-valid': editForm.get('name').valid 
+          && (editForm.get('name').dirty || editForm.get('name').touched || editForm.valid) }">
+          <span class="text-danger" *ngIf="editForm.get('name').invalid 
+          && (editForm.get('name').dirty || editForm.get('name').touched || editForm.valid) 
+          && editForm.get('name').errors?.required">Status can't be blank</span>
+          </div>
           </div>
 
 
@@ -242,14 +242,14 @@
           <div class="form-group row visibility-falses">
             <label for="lblactiveuser" class="col-sm-4 col-form-label">Active User</label>
             <div class="col-sm-8">
-              <input type="text" readonly class="form-control" [(ngModel)]="activeUser" formControlName="addedby">
+              <input type="text" class="form-control" [(ngModel)]="activeUser" formControlName="addedby">
 
             </div>
           </div>
 
         </div>
         <div class="modal-footer">
-          <button mat-stroked-button color="accent" class="mr-1" data-dismiss="modal" id="newModal"
+          <button mat-stroked-button color="accent" class="mr-1" data-dismiss="modal" id="newModal1"
             type="button">Cancel</button>
           <button mat-stroked-button color="primary" [disabled]="!newForm.valid" (click)="onSaveClick()">Save</button>
         </div>
