--- a/app/admin/components/asp-net-roles/asp-net-roles.component.html
+++ b/app/admin/components/asp-net-roles/asp-net-roles.component.html
@@ -59,8 +59,9 @@
             </th>
             <th class="text-center" style="width:20%">Added By</th>
             <th class="text-center" style="width:20%">Date Added</th>
+            <th class="text-center" style="width:20%">Status</th>
             <th class="text-center" style="width:20%">Actions</th>
-            <!-- <th class="text-center" style="width:200px">Actions</th> -->
+            
           </tr>
 
           <tr
@@ -68,6 +69,7 @@
             <td>{{role.name}}</td>
             <td>Sa</td>
             <td>ss</td>
+            <td>{{role.isactive}}</td>
             <td class="text-center">
               <button mat-stroked-button color="primary" class="editbtnStyle" (click)="onEditClick($event, role)"
                 data-toggle="modal" data-target="#editModal1" data-backdrop="false" data-keyboard="false">
@@ -154,7 +156,7 @@
             <label for="txtEdit" class="col-sm-4 col-form-label">Role</label>
             <div class="col-sm-8">
               <input type="text" autocomplete="off" id="txtrole" class="form-control" placeholder="Role" name="name"
-                formControlName="name" maxlength="30" #defaultTextBox_Edit [ngClass]="{ 'is-invalid': editForm.get('name').invalid 
+                formControlName="name" #DescriptionUpdate maxlength="30" #defaultTextBox_Edit [ngClass]="{ 'is-invalid': editForm.get('name').invalid 
               && (editForm.get('name').dirty || editForm.get('name').touched || editForm.valid), 
               'is-valid': editForm.get('name').valid 
               && (editForm.get('name').dirty || editForm.get('name').touched || editForm.valid) }">
@@ -188,13 +190,13 @@
           </div>
 
 
-          <!-- <div class="form-group row visibility-false">
+          <div class="form-group row visibility-falsey">
                       <label for="lblactiveuser" class="col-sm-4 col-form-label">Active User</label>
                       <div class="col-sm-8">
                           <input type="text" readonly class="form-control" [(ngModel)]="activeUser"
                               formControlName="modifiedby">
                       </div>
-                  </div>  -->
+                  </div> 
 
 
         </div>
@@ -239,7 +241,7 @@
 
 
 
-          <div class="form-group row visibility-falses">
+          <div class="form-group row visibility-false">
             <label for="lblactiveuser" class="col-sm-4 col-form-label">Active User</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" [(ngModel)]="activeUser" formControlName="addedby">
