--- a/app/admin/components/asp-net-roles/asp-net-roles.component.html
+++ b/app/admin/components/asp-net-roles/asp-net-roles.component.html
@@ -1,14 +1,10 @@
 <h5>
-  <!-- Reject Status -->
   <i class="fa fa-circle-o-notch fa-spin" style="font-size:24px" *ngIf="showLoading"></i>
 </h5>
 
 <div class="row">
-
-
   <div class="col-sm-12">
     <div class="d-flex">
-
       <div class="p-2">
         <div class="input-group searchBtnStyle">
           <div class="input-group-prepend">
@@ -25,9 +21,16 @@
       <div class="p-2">
         <div class="input-group searchBtnStyle">
           <div class="input-group-prepend">
-            <span class="input-group-text" id="basic-addon1"><span class="fa fa-search"></span></span>
+            <span 
+            class="input-group-text" 
+            id="basic-addon1"><span class="fa fa-search"></span></span>
           </div>
-          <input type="text" class="form-control " placeholder="Find here...." id="txtSearchText" autocomplete="off"
+          <input 
+          type="text" 
+          class="form-control " 
+          placeholder="Find here...." 
+          id="txtSearchText" 
+          autocomplete="off"
             name="SearchText" [(ngModel)]="searchText" (keyup)="onSearchTextChange($event)">
         </div>
       </div>
@@ -46,7 +49,7 @@
       <div class="col-xl-12 col-lg-9 mx-auto">
         <table class="table table-striped table-bordered nowrap table-responsive-sm" style="width:100%">
           <tr class="text-light header-bg-color-um system-name">
-            <th class="text-center" style="width:20%">
+            <th class="text-center" style="width:16%">
               Role
               <i class="fa fa-sort hand-icon" *ngIf="sortBy != 'name' "
                 (click)="sortBy = 'name'; sortOrder = 'ASC' "></i>
@@ -57,19 +60,27 @@
               <i class="fa fa-sort-down hand-icon text-primary" *ngIf="sortBy == 'name' && sortOrder == 'DESC' "
                 (click)="sortOrder = 'ASC' "></i>
             </th>
-            <th class="text-center" style="width:20%">Added By</th>
-            <th class="text-center" style="width:20%">Date Added</th>
-            <th class="text-center" style="width:20%">Status</th>
-            <th class="text-center" style="width:20%">Actions</th>
-            
+            <th class="text-center" style="width:16%">Added By</th>
+            <th class="text-center" style="width:16%">Date Added</th>
+            <th class="text-center" style="width:16%">Status</th>
+            <th class="text-center" style="width:16%">Access</th>
+            <th class="text-center" style="width:16%">Actions</th>
           </tr>
 
-          <tr
-            *ngFor="let role of UserRole | filter: searchBy : searchText | sort : sortBy : sortOrder | paging : currentPageIndex : pageSize; let i = index">
+          <tr *ngFor="let role of UserRole 
+            | filter: searchBy : searchText 
+            | sort : sortBy : sortOrder 
+            | paging : currentPageIndex : pageSize; let i = index">
             <td>{{role.name}}</td>
-            <td>Sa</td>
-            <td>ss</td>
+            <td>{{role.addedby}}</td>
+            <td>{{role.dateadded | date: "MM/dd/yyyy"}}</td>
             <td>{{role.isactive}}</td>
+            <td class="text-center">
+              <button mat-stroked-button color="primary" class="editbtnStyle" (click)="onEditClick($event, role)"
+              data-toggle="modal" data-target="#editModalModuleTagging" data-backdrop="false" data-keyboard="false">
+              <mat-icon>turned_in_not</mat-icon>
+            </button>&nbsp;
+            </td>
             <td class="text-center">
               <button mat-stroked-button color="primary" class="editbtnStyle" (click)="onEditClick($event, role)"
                 data-toggle="modal" data-target="#editModal1" data-backdrop="false" data-keyboard="false">
@@ -190,13 +201,135 @@
           </div>
 
 
-          <div class="form-group row visibility-falsey">
-                      <label for="lblactiveuser" class="col-sm-4 col-form-label">Active User</label>
-                      <div class="col-sm-8">
-                          <input type="text" readonly class="form-control" [(ngModel)]="activeUser"
-                              formControlName="modifiedby">
-                      </div>
-                  </div> 
+          <div class="form-group row visibility-false">
+            <label for="lblactiveuser" class="col-sm-4 col-form-label">Active User</label>
+            <div class="col-sm-8">
+              <input type="text" readonly class="form-control" [(ngModel)]="activeUser" formControlName="modifiedby">
+            </div>
+          </div>
+
+
+        </div>
+        <div class="modal-footer">
+          <button mat-stroked-button color="accent" class="mr-1" id="editCancelModal" data-dismiss="modal"
+            type="button">Cancel</button>
+          <button mat-stroked-button color="primary" [disabled]="!editForm.valid"
+            (click)="onUpdateClick()">Update</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</form>
+
+
+
+
+
+<form novalidate="novalidate" [formGroup]="editForm">
+  <div class="modal" role="dialog" id="editModalModuleTagging">
+    <div class="modal-dialog modal-xl">
+      <div class="modal-content">
+        <div class="modal-header bg-all text-white">
+          <div class="modal-title">Module Tagging</div>
+          <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+        </div>
+        <div class="modal-body">
+
+<div class="form-group">
+  
+
+
+
+    <label for="drpEditClientLocation" class="col-sm-4 col-form-label">Main Menu </label>
+    <div class="col-sm-6">
+        <select id="txtmainmodule" 
+        class="form-control" 
+        (change)="getNewFourthApproverId($event.target.value)"  maxlength="30" #defaultTextBox_New
+             #UpdateDesc>
+            <option value="null">Please Select</option>
+            <option *ngFor="let menu of MainMenu | async" [value]="menu.id">
+                {{menu.mainmodulename}}
+            </option>
+        </select>
+   
+    
+</div>
+
+
+
+
+</div>
+
+<div class="row">
+  <div class="column">
+    <!-- <h2>Sample 1</h2> -->
+    <div class="title-tagging-desc">List of tagged modules:</div>
+    <div class="col-lg-12 mx-auto">
+      <table class="table table-striped table-bordered nowrap table-responsive-sm" style="width:100%">
+        <tr class="text-light header-bg-color-um system-name">
+          <th class="text-center" style="width:16%">
+            ID
+            <i class="fa fa-sort hand-icon" *ngIf="sortBy != 'name' "
+              (click)="sortBy = 'name'; sortOrder = 'ASC' "></i>
+
+            <i class="fa fa-sort-up hand-icon text-primary" *ngIf="sortBy == 'name' && sortOrder == 'ASC' "
+              (click)="sortOrder = 'DESC' "></i>
+
+            <i class="fa fa-sort-down hand-icon text-primary" *ngIf="sortBy == 'name' && sortOrder == 'DESC' "
+              (click)="sortOrder = 'ASC' "></i>
+          </th>
+          <th class="text-center" style="width:16%">Main Menu</th>
+          <th class="text-center" style="width:16%">Sub Menu</th>
+          <th class="text-center" style="width:16%">Untag</th>
+          <th class="text-center" style="width:16%">Access</th>
+          <th class="text-center" style="width:16%">Actions</th>
+        </tr>
+
+        <tr *ngFor="let role of UserRole 
+          | filter: searchBy : searchText 
+          | sort : sortBy : sortOrder 
+          | paging : currentPageIndex : pageSize; let i = index">
+          <td>{{role.name}}</td>
+          <td>{{role.addedby}}</td>
+          <td>{{role.dateadded | date: "MM/dd/yyyy"}}</td>
+          <td>{{role.isactive}}</td>
+          <td class="text-center">
+            <button mat-stroked-button color="primary" class="editbtnStyle" (click)="onEditClick($event, role)"
+            data-toggle="modal" data-target="#editModalModuleTagging" data-backdrop="false" data-keyboard="false">
+            <mat-icon>turned_in_not</mat-icon>
+          </button>&nbsp;
+          </td>
+          <td class="text-center">
+            <button mat-stroked-button color="primary" class="editbtnStyle" (click)="onEditClick($event, role)"
+              data-toggle="modal" data-target="#editModal1" data-backdrop="false" data-keyboard="false">
+              <mat-icon> update</mat-icon>
+            </button>&nbsp;
+          </td>
+        </tr>
+      </table>
+    </div>
+
+
+  </div>
+  <div class="column" style="background-color: blue;">
+    <h2>Sample 2</h2>
+  </div>
+</div>
+
+
+
+
+
+
+         
+
+
+          <div class="form-group row visibility-false">
+            <label for="lblactiveuser" class="col-sm-4 col-form-label">Active User</label>
+            <div class="col-sm-8">
+              <input type="text" readonly class="form-control" [(ngModel)]="activeUser" formControlName="modifiedby">
+            </div>
+          </div>
 
 
         </div>
@@ -226,17 +359,17 @@
         <div class="modal-body">
 
           <div class="form-group row">
-          <label for="txtEdit" class="col-sm-4 col-form-label">Role</label>
-          <div class="col-sm-8">
-          <input type="text" autocomplete="off" id="txtrole" class="form-control" placeholder="Role" name="name"
-          formControlName="name" #Description maxlength="30" #defaultTextBox_Edit [ngClass]="{ 'is-invalid': editForm.get('name').invalid 
+            <label for="txtEdit" class="col-sm-4 col-form-label">Role</label>
+            <div class="col-sm-8">
+              <input type="text" autocomplete="off" id="txtrole" class="form-control" placeholder="Role" name="name"
+                formControlName="name" #Description maxlength="30" #defaultTextBox_Edit [ngClass]="{ 'is-invalid': editForm.get('name').invalid 
           && (editForm.get('name').dirty || editForm.get('name').touched || editForm.valid), 
           'is-valid': editForm.get('name').valid 
           && (editForm.get('name').dirty || editForm.get('name').touched || editForm.valid) }">
-          <span class="text-danger" *ngIf="editForm.get('name').invalid 
+              <span class="text-danger" *ngIf="editForm.get('name').invalid 
           && (editForm.get('name').dirty || editForm.get('name').touched || editForm.valid) 
           && editForm.get('name').errors?.required">Status can't be blank</span>
-          </div>
+            </div>
           </div>
 
 
