--- a/app/admin/components/asp-net-roles/asp-net-roles.component.scss
+++ b/app/admin/components/asp-net-roles/asp-net-roles.component.scss
@@ -5,3 +5,37 @@
 .visibility-false {
   display:none;
 }
+* {
+  box-sizing: border-box;
+}
+
+// Create two equal columns that floats next to each other bobo ka
+.column {
+  float: left;
+  width: 50%;
+  padding: 0%;
+  // height: 300px;
+}
+
+.title-tagging-desc{
+  text-align: center;
+  font-size: 20px;
+  margin: 5px;
+}
+
+// Clear floats after the column
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+  }
+}
+
+
