--- a/app/admin/components/asp-net-roles/asp-net-roles.component.html
+++ b/app/admin/components/asp-net-roles/asp-net-roles.component.html
@@ -21,16 +21,9 @@
       <div class="p-2">
         <div class="input-group searchBtnStyle">
           <div class="input-group-prepend">
-            <span 
-            class="input-group-text" 
-            id="basic-addon1"><span class="fa fa-search"></span></span>
+            <span class="input-group-text" id="basic-addon1"><span class="fa fa-search"></span></span>
           </div>
-          <input 
-          type="text" 
-          class="form-control " 
-          placeholder="Find here...." 
-          id="txtSearchText" 
-          autocomplete="off"
+          <input type="text" class="form-control " placeholder="Find here...." id="txtSearchText" autocomplete="off"
             name="SearchText" [(ngModel)]="searchText" (keyup)="onSearchTextChange($event)">
         </div>
       </div>
@@ -77,9 +70,9 @@
             <td>{{role.isactive}}</td>
             <td class="text-center">
               <button mat-stroked-button color="primary" class="editbtnStyle" (click)="onEditClick($event, role)"
-              data-toggle="modal" data-target="#editModalModuleTagging" data-backdrop="false" data-keyboard="false">
-              <mat-icon>turned_in_not</mat-icon>
-            </button>&nbsp;
+                data-toggle="modal" data-target="#editModalModuleTagging" data-backdrop="false" data-keyboard="false">
+                <mat-icon>turned_in_not</mat-icon>
+              </button>&nbsp;
             </td>
             <td class="text-center">
               <button mat-stroked-button color="primary" class="editbtnStyle" (click)="onEditClick($event, role)"
@@ -235,93 +228,137 @@
         </div>
         <div class="modal-body">
 
-<div class="form-group">
-  
-
-
-
-    <label for="drpEditClientLocation" class="col-sm-4 col-form-label">Main Menu </label>
-    <div class="col-sm-6">
-        <select id="txtmainmodule" 
-        class="form-control" 
-        (change)="getNewFourthApproverId($event.target.value)"  maxlength="30" #defaultTextBox_New
-             #UpdateDesc>
-            <option value="null">Please Select</option>
-            <option *ngFor="let menu of MainMenu | async" [value]="menu.id">
-                {{menu.mainmodulename}}
-            </option>
-        </select>
-   
-    
-</div>
+          <div class="form-group">
 
 
 
 
-</div>
-
-<div class="row">
-  <div class="column">
-    <!-- <h2>Sample 1</h2> -->
-    <div class="title-tagging-desc">List of tagged modules:</div>
-    <div class="col-lg-12 mx-auto">
-      <table class="table table-striped table-bordered nowrap table-responsive-sm" style="width:100%">
-        <tr class="text-light header-bg-color-um system-name">
-          <th class="text-center" style="width:16%">
-            ID
-            <i class="fa fa-sort hand-icon" *ngIf="sortBy != 'name' "
-              (click)="sortBy = 'name'; sortOrder = 'ASC' "></i>
-
-            <i class="fa fa-sort-up hand-icon text-primary" *ngIf="sortBy == 'name' && sortOrder == 'ASC' "
-              (click)="sortOrder = 'DESC' "></i>
-
-            <i class="fa fa-sort-down hand-icon text-primary" *ngIf="sortBy == 'name' && sortOrder == 'DESC' "
-              (click)="sortOrder = 'ASC' "></i>
-          </th>
-          <th class="text-center" style="width:16%">Main Menu</th>
-          <th class="text-center" style="width:16%">Sub Menu</th>
-          <th class="text-center" style="width:16%">Untag</th>
-          <th class="text-center" style="width:16%">Access</th>
-          <th class="text-center" style="width:16%">Actions</th>
-        </tr>
-
-        <tr *ngFor="let role of UserRole 
-          | filter: searchBy : searchText 
-          | sort : sortBy : sortOrder 
-          | paging : currentPageIndex : pageSize; let i = index">
-          <td>{{role.name}}</td>
-          <td>{{role.addedby}}</td>
-          <td>{{role.dateadded | date: "MM/dd/yyyy"}}</td>
-          <td>{{role.isactive}}</td>
-          <td class="text-center">
-            <button mat-stroked-button color="primary" class="editbtnStyle" (click)="onEditClick($event, role)"
-            data-toggle="modal" data-target="#editModalModuleTagging" data-backdrop="false" data-keyboard="false">
-            <mat-icon>turned_in_not</mat-icon>
-          </button>&nbsp;
-          </td>
-          <td class="text-center">
-            <button mat-stroked-button color="primary" class="editbtnStyle" (click)="onEditClick($event, role)"
-              data-toggle="modal" data-target="#editModal1" data-backdrop="false" data-keyboard="false">
-              <mat-icon> update</mat-icon>
-            </button>&nbsp;
-          </td>
-        </tr>
-      </table>
-    </div>
+            <label for="drpEditClientLocation" class="col-sm-4 col-form-label">Main Menu </label>
+            <div class="col-sm-6">
+              <select id="txtmainmodule" class="form-control" (change)="getNewFourthApproverId($event.target.value)"
+                maxlength="30" #defaultTextBox_New #UpdateDesc>
+                <option value="null">Please Select</option>
+                <option *ngFor="let menu of MainMenu | async" [value]="menu.id">
+                  {{menu.mainmodulename}}
+                </option>
+              </select>
 
 
-  </div>
-  <div class="column" style="background-color: blue;">
-    <h2>Sample 2</h2>
-  </div>
-</div>
+            </div>
 
 
 
 
+          </div>
+
+          <div class="row">
+            <div class="column">
+              <!-- <h2>Sample 1</h2> -->
+              <div class="title-tagging-desc">List of tagged modules:</div>
+              <div class="col-lg-12 mx-auto">
+                <table class="table table-striped table-bordered nowrap table-responsive-sm" style="width:100%">
+                  <tr class="text-light header-bg-color-um system-name">
+                    <th class="text-center" style="width:16%">
+                      ID
+                    </th>
+                    <th class="text-center" style="width:16%">Main Menu</th>
+                    <th class="text-center" style="width:16%">Sub Menu</th>
+                    <th class="text-center" style="width:16%">Untag</th>
 
 
-         
+                  </tr>
+
+                  <tr *ngFor="let role of RoleModule | paging : currentPageIndexModuleTagged : pageSize;
+                   let i = index">
+                    <td>{{role.id}}</td>
+                    <td>{{role.mainmodulename}}</td>
+                    <td>{{role.submenuname}}</td>
+
+
+                    <td class="text-center">
+                      <button mat-stroked-button color="primary" class="editbtnStyle"
+                        (click)="onEditClick($event, role)" data-toggle="modal" data-target="#editModal1"
+                        data-backdrop="false" data-keyboard="false">
+                        <mat-icon>remove_circle_outline</mat-icon>
+                      </button>&nbsp;
+                    </td>
+                  </tr>
+                </table>
+
+                <div class="col-12">
+                  <ul class="pagination justify-content-center mt-1">
+                    <li class="page-item" (click)="onPageIndexClickedModuleTagged(currentPageIndexModuleTagged - 1)">
+                      <a mat-stroked-button color="primary" class="mr-1 font-color-black" href="#" onclick="return false">Prev</a>
+                    </li>
+              
+                    <ng-container *ngIf="pages.length <= 10">
+                      <li class="page-item" *ngFor="let page of pages"
+                        [ngClass]="{ 'link-active-paging': page.pageIndex == currentPageIndexModuleTagged}"
+                        (click)="onPageIndexClickedModuleTagged(page.pageIndex)">
+                        <a class="page-link" href="#" onclick="return false">{{page.pageIndex + 1}}</a>
+                      </li>
+                    </ng-container>
+              
+                    <ng-container *ngIf="pages.length > 10">
+                      <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexModuleTagged == 0}"
+                        (click)="onPageIndexClickedModuleTagged(0)">
+                        <a class="page-link" href="#" onclick="return false">1</a>
+                      </li>
+              
+                      <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexModuleTagged == 1}"
+                        (click)="onPageIndexClickedModuleTagged(1)">
+                        <a class="page-link" href="#" onclick="return false">2</a>
+                      </li>
+              
+                      <li *ngIf="currentPageIndexModuleTagged > 1 && currentPageIndexModuleTagged < pages.length - 2">&nbsp;...&nbsp;</li>
+              
+                      <li class="page-item" [ngClass]=" 'link-active-paging' " (click)="onPageIndexClickedModuleTagged(currentPageIndexModuleTagged)"
+                        *ngIf="currentPageIndexModuleTagged > 1 && currentPageIndexModuleTagged < pages.length - 2">
+                        <a class="page-link" href="#" onclick="return false">{{currentPageIndexModuleTagged + 1}}</a>
+                      </li>
+              
+                      <li>&nbsp;...&nbsp;</li>
+              
+                      <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexModuleTagged == pages.length - 2}"
+                        (click)="onPageIndexClickedModuleTagged(pages.length - 2)">
+                        <a class="page-link" href="#" onclick="return false">{{pages.length - 1}}</a>
+                      </li>
+              
+                      <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexModuleTagged == pages.length - 1}"
+                        (click)="onPageIndexClickedModuleTagged(pages.length - 1)">
+                        <a class="page-link" href="#" onclick="return false">{{pages.length}}</a>
+                      </li>
+                    </ng-container>
+              
+                    <li class="page-item" (click)="onPageIndexClickedModuleTagged(currentPageIndexModuleTagged + 1)">
+                      <a mat-stroked-button color="primary" class="ml-1 font-color-black" href="#" onclick="return false">Next</a>
+                    </li>
+                  </ul>
+                </div>
+
+
+              </div>
+
+
+            </div>
+            <div class="column" style="background-color: blue;">
+              <h2>Sample 2</h2>
+            </div>
+          </div>
+
+
+          <div class="form-group row visibility-false">
+            <label for="txtEdit" class="col-sm-4 col-form-label">Role</label>
+            <div class="col-sm-8">
+              <input type="text" autocomplete="off" id="txtId" class="form-control" placeholder="Id" name="id"
+                formControlName="id" #RoleId>
+
+            </div>
+          </div>
+
+
+
+
 
 
           <div class="form-group row visibility-false">
