--- a/app/admin/components/asp-net-roles/asp-net-roles.component.html
+++ b/app/admin/components/asp-net-roles/asp-net-roles.component.html
@@ -271,8 +271,7 @@
                     <td>{{role.submenuname}}</td>
                     <td class="text-center">
                       <button mat-stroked-button color="primary" class="editbtnStyle"
-                        (click)="onEditClick($event, role)" data-toggle="modal" data-target="#editModal1"
-                        data-backdrop="false" data-keyboard="false">
+                        (click)="onUntaggedClick($event, role)">
                         <mat-icon>remove_circle_outline</mat-icon>
                       </button>&nbsp;
                     </td>
@@ -305,7 +304,8 @@
                         <a class="page-link" href="#" onclick="return false">2</a>
                       </li>
 
-                      <li *ngIf="currentPageIndexModuleTagged > 1 && currentPageIndexModuleTagged < pagesTagged.length - 2">
+                      <li
+                        *ngIf="currentPageIndexModuleTagged > 1 && currentPageIndexModuleTagged < pagesTagged.length - 2">
                         &nbsp;...&nbsp;</li>
 
                       <li class="page-item" [ngClass]=" 'link-active-paging' "
@@ -343,7 +343,7 @@
             </div>
             <div class="column">
               <!-- start -->
-              <div class="title-tagging-desc">List of Untagged modules: {{totalRoleModulesUntaggedRowCount}}</div>
+              <div class="title-tagging-desc">List of untagged modules: {{totalRoleModulesUntaggedRowCount}}</div>
               <div class="col-lg-12 mx-auto">
                 <table class="table table-striped table-bordered nowrap table-responsive-sm" style="width:100%">
                   <tr class="text-light header-bg-color-um system-name">
@@ -366,8 +366,7 @@
 
                     <td class="text-center">
                       <button mat-stroked-button color="primary" class="editbtnStyle"
-                        (click)="onEditClick($event, role)" data-toggle="modal" data-target="#editModal1"
-                        data-backdrop="false" data-keyboard="false">
+                        (click)="onTaggedClick($event, role)">
                         <mat-icon>add_circle_outline</mat-icon>
                       </button>&nbsp;
                     </td>
