--- a/app/admin/components/asp-net-roles/asp-net-roles.component.html
+++ b/app/admin/components/asp-net-roles/asp-net-roles.component.html
@@ -352,7 +352,7 @@
                     </th>
                     <th class="text-center" style="width:16%">Main Menu</th>
                     <th class="text-center" style="width:16%">Sub Menu</th>
-                    <th class="text-center" style="width:16%">Untag</th>
+                    <th class="text-center" style="width:16%">Tag</th>
 
 
                   </tr>
