--- a/app/admin/components/parent-main-modules/parent-main-modules.component.html
+++ b/app/admin/components/parent-main-modules/parent-main-modules.component.html
@@ -164,7 +164,6 @@
                         <div class="col-sm-8">
                             <input type="text" readonly class="form-control" [(ngModel)]="activeUser"
                                 formControlName="addedby">
-
                         </div>
                     </div>
 
@@ -238,7 +237,11 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button mat-stroked-button color="accent" class="mr-1" id="editCancelModal" data-dismiss="modal"
+                    <button mat-stroked-button 
+                    color="accent" 
+                    class="mr-1" 
+                    id="editCancelModals" 
+                    data-dismiss="modal"
                         type="button">Cancel</button>
                     <button mat-stroked-button color="primary" [disabled]="!editForm.valid"
                         (click)="onUpdateClick()">Update</button>
