Po Receiving Component Visibility Tagging Done

--- a/app/admin/components/modules/modules.component.html
+++ b/app/admin/components/modules/modules.component.html
@@ -231,7 +231,7 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button mat-stroked-button color="accent" class="mr-1" data-dismiss="modal" id="newModal"
+                    <button mat-stroked-button color="accent" class="mr-1" data-dismiss="modal" id="newModals"
                         type="button">Cancel</button>
                     <button mat-stroked-button color="primary" [disabled]="!newForm.valid"
                         (click)="onSaveClick()">Save</button>
